BUGFIX: Media Browser - Make font visible on tag hover

--- a/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
+++ b/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
@@ -118,6 +118,12 @@
 							}
 
 							&:hover {
+								background-color: $blue;
+
+								.count{
+									color: #fff;
+								}
+								
 								.neos-media-assetsource-icon {
 									filter: none;
 								}
